# CS-4ZP6

Automated Testing/: README.txt  src.rar
Automated Testing/make/: Makefile
Chipmunk2D Windows GCC/: Chipmunk-7.0.1.rar  README.txt
Chipmunk2D_DerivedDocumentation/: Readme.txt
Chipmunk2D_DerivedDocumentation/Chipmunk_UnitTesting/: Chipmunk_UnitTesting.sln  README.txt
Chipmunk2D_DerivedDocumentation/Code Changes/: chipmunk_private.h
Chipmunk2D_DerivedDocumentation/Documentation (MIG)/: Changes made to Chipmunk.tex
Chipmunk2D_DerivedDocumentation/MG/: Game Physics Library MG.tex
Chipmunk2D_DerivedDocumentation/SRS/: game physics library_SRS.tex
Chipmunk2D_DerivedDocumentation/V&V/: game physics library V&V.tex
Design document/Detailed Design/: Detailed Design.tex
Design document/Schedule/: Project Schedule.gan
Design document/System Architecture/: System Architecture.aux  System Architecture.blg  System Architecture.lof  System Architecture.out  System Architecture.synctex  System Architecture.tex  System Architecture.tex.bak  System Architecture.toc
Design document/UI/: 4ZP6 UI.docx  ~$ZP6 UI.docx
Final Demonstration/: Platform Perils.pptx
Final Documentation/: README.txt  Summary of Changes Made for Revision 1.docx  ~$mmary of Changes Made for Revision 1.docx
Game/: Demo  Game.cbp  Game.depend  Game.layout  PlatformPerils.cbp  PlatformPerils.depend  PlatformPerils.layout  PoC.cbp  PoC.depend  PoC.layout  main.cpp  makefile
Game/doxygen/: doxyfile
Game/include/: Arch.h  Boulder.h  Camera.h  CollisionHandlers.h  DynamicObject.h  Environment.h  Hero.h  KinematicObject.h  Menu.h  MovingPlatform.h  Obj.h  ObjGPUData.h  PhysicsObject.h  Spear.h  Spikes.h  Stage.h  StageLoader.h  StaticObject.h  Surface.h  Wall.h
Game/src/: Arch.cpp  Camera.cpp  CollisionHandlers.cpp  DynamicObject.cpp  Game.cpp  KinematicObject.cpp  Loader.cpp  Menu.cpp  MovingPlatform.cpp  Obj.cpp  PhysicsObject.cpp  Platform.cpp  Ramp.cpp  Shader.cpp  ShaderStore.cpp  Skybox.cpp  Spear.cpp  Spikes.cpp  Stage.cpp  StageLoader.cpp  StandardObject.cpp  StaticObject.cpp  Wall.cpp
OS Independent Build - No Menu/gamebuilder/source/: CMakeLists.txt
OS Independent Build - No Menu/gamebuilder/source/data/shader/: fObject.glsl  vSkybox.glsl
OS Independent Build - No Menu/gamebuilder/source/include/: Environment.h  Hero.h  Obj.h  ObjGPUDataStore.h  Platform.h  Ramp.h  Shader.h  Stage.h  StageLoader.h  StaticObject.h  Surface.h  Wall.h
OS Independent Build - No Menu/gamebuilder/source/libsrc/chipmunk/src/: CMakeLists.txt
OS Independent Build - No Menu/gamebuilder/source/libsrc/glfw/: CMakeLists.txt
OS Independent Build - No Menu/gamebuilder/source/src/: Arch.cpp  Boulder.cpp  CMakeLists.txt  Camera.cpp  DynamicObject.cpp  Environment.cpp  Game.cpp  ImgLoader.cpp  KinematicObject.cpp  Skybox.cpp  Sound.cpp  Spear.cpp  Stage.cpp  Surface.cpp
OS Independent Build/gamebuilder/: README.txt
OS Independent Build/gamebuilder/source/src/: Boundary.cpp  CMakeLists.txt  Camera.cpp  CollisionHandlers.cpp  Game.cpp  Hero.cpp  Menu.cpp  MovingPlatform.cpp  Obj.cpp  ObjGPUData.cpp  Platform.cpp  Ramp.cpp  Skybox.cpp  Sound.cpp  Spear.cpp  Spikes.cpp  Stage.cpp  StageLoader.cpp  StandardObject.cpp  StaticObject.cpp  main.cpp
Problem Statement/: Problem Statement.tex
Project Schedule/: Project Schedule.gan
Proof of Concept Demo/: 1.sh  Boulder.cpp  Boundary.cpp  Boundary.h  CollisionHandlers.cpp  CollisionHandlers.h  Demo  DynamicObject.cpp  DynamicObject.h  Environment.cpp  Environment.h  Game.cpp  Game.h  Hero.cpp  Hero.h  ImgLoader.cpp  ImgLoader.h  IncludeObjects.h  KinematicObject.h  Loader.cpp  Loader.h  Menu.h  MenuManager.cpp  MenuManager.h  Obj.cpp  Obj.h  ObjGPUData.cpp  ObjGPUData.h  ObjGPUDataStore.cpp  ObjGPUDataStore.h  PhysicsObject.cpp  PhysicsObject.h  Platform.cpp  Platform.h  PoC.cbp  PoC.depend  PoC.layout  Ramp.cpp  Ramp.h  Shader.cpp  (+30 more)
Proof of Concept Demo/data/: bullet.mtl
Proof of Concept Demo/include/: Environment.h  Game.h  Obj.h  ObjGPUData.h  PhysicsObject.h  Platform.h  Shader.h  Sound.h  Stage.h  StandardObject.h
Proof of Concept Demo/src/: Camera.cpp  Game.cpp  Hero.cpp  ImgLoader.cpp  Obj.cpp  ObjGPUDataStore.cpp  Sound.cpp  Spikes.cpp  Stage.cpp  Wall.cpp
Proof of Concept Demonstration Plan/: Proof of Concept Demonstration Plan.tex
Software Requirements Specification/: README.txt  Software Requirements Specification.aux  Software Requirements Specification.lof  Software Requirements Specification.lot  Software Requirements Specification.out  Software Requirements Specification.tex  Software Requirements Specification.toc  srs v1.0.aux  srs v1.0.lot  srs v1.0.out  srs v1.0.tex  srs v1.0.toc  srs v1.1.aux  srs v1.1.lot  srs v1.1.out  srs v1.1.tex  srs v1.1.toc  srs v1.2.tex
Test Plan/: Test Plan.tex
Test Report/: Test Report.tex
User Guide/: User Guide.tex
openal/test/: main.c  openaltest.c  readme.txt  (+4 more)
(+1065 files in other folders)
